[package]
name = "quic-perf"
version = "0.1.0"
edition = "2021"

[dependencies]
quiche = { version = "*" }
quinn = { version = "*" }
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
tokio = { version = "1", features = ["full"] }
clap = { version="*", features = ["derive"] }
rcgen = "*"

[[bin]]
name = "tcp-reference"
path = "src/bin/tcp_throughput.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
