[package]
name = "quic-perf"
version = "0.1.0"
edition = "2021"

[dependencies]
quiche = { version = "*" }
quinn = { version = "*" }
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
tokio = { version = "1", features = ["full"] }
clap = { version="*", features = ["derive"] }
rcgen = "*"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
